:package: chore: 폴더 경로 추가 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,12 @@
   },
   "include": ["src"],
   "paths": {
+    "api/*": ["api/*"],
     "pages/*": ["pages/*"],
     "components/*": ["components/*"],
     "constants/*": ["constants/*"],
     "styles/*": ["styles/*"],
+    "types/*": ["types/*"],
     "utils/*": ["utils/*"],
     "hooks/*": ["hooks/*"],
     "lib/*": ["lib/*"]
