--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rakuten-symphony-transfer",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://storage-fe.fastraffic.io/homeworks",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
