--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
   from = "/proxy/*"
-  to = ":splat"
+  to = "https://storage-fe.fastraffic.io/:splat"
   status = 200
-  headers = {Access-Control-Allow-Origin = "*"}
+  force = true
