--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "yarn start",
+    "start": "react-scripts start",
     "start-dev": "react-app-rewired start",
-    "build": "yarn build",
+    "build": "react-scripts build",
     "build-dev": "react-app-rewired build",
     "eject": "react-app-rewired eject"
   },
