--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start-dev": "react-app-rewired start",
-    "build": "react-scripts build",
-    "build-dev": "react-app-rewired build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
@@ -56,5 +54,6 @@
     "eslint-config-prettier": "^8.4.0",
     "prettier": "^2.5.1",
     "react-app-rewired": "^2.1.11"
-  }
+  },
+  "proxy": "https://storage-fe.fastraffic.io"
 }
