🚑 hotfix: netlify 환경변수 설정

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,7 @@
   to = "https://storage-fe.fastraffic.io/:splat"
   status = 200
   force = true
+
+[context.production.environment]
+  TOML_ENV_VAR = "From netlify.toml"
+  REACT_APP_TOML_ENV_VAR = "From netlify.toml (REACT_APP_)"
