--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "symphony-storage",
+  "name": "shared-link-list",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://storage-fe.fastraffic.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -54,6 +55,5 @@
     "eslint-config-prettier": "^8.4.0",
     "prettier": "^2.5.1",
     "react-app-rewired": "^2.1.11"
-  },
-  "proxy": "https://storage-fe.fastraffic.io"
+  }
 }
